--- a/app/views/deals/sneakers01M.html.erb
+++ b/app/views/deals/sneakers01M.html.erb
@@ -36,7 +36,7 @@
 
         <div class="column_box">
           <div class="flex column shoes_column" onclick="currentSlide(1)">
-            <img src="https://needsupply.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/3/5/356686M106328_M106328_1.jpg">
+            <img src="https://img.shopstyle-cdn.com/pim/6f/46/6f46071c8dee37dd27f836509ae200d8_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(2)">
             <img src="https://img.ssensemedia.com/image/upload/b_white/c_scale,h_820/f_auto,dpr_1.0/191178M237005_1.jpg">
@@ -218,7 +218,7 @@
                  <address>*Lower price available on select options</address>
                  <p class="color">Available Colors: Tan</p>
                  <p class="size">Available Sizes: 7M , 7.5M , 8M , 8.5M , 9M , 9.5M , 10M , 10.5M , 11M , 11.5M , 12M , 13M , 14M</p>
-                 <div class="size_table"><h4 id="clickMeBtn">Size Guide</h4><%= render 'deals/sizeM_table' %></div>
+                 <!-- <div class="size_table"><h4 id="clickMeBtn">Size Guide</h4><%= render 'deals/sizeM_table' %></div> -->
                  <div class="btn"><a href="#n">Check it Out on <span>Amazon</span></a></div>
                   <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
                 </div>
