--- a/app/views/promocodes_days/_day_03.html.erb
+++ b/app/views/promocodes_days/_day_03.html.erb
@@ -14,7 +14,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ImO88z">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ImO88z">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -41,7 +41,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FfuYzE">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FfuYzE">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -61,7 +61,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WJF7dW">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2WJF7dW">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -81,7 +81,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WNjMA0">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2WNjMA0">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -101,7 +101,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZpKHDQ">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZpKHDQ">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -121,7 +121,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XlYden">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XlYden">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -141,7 +141,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IlKw6N">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IlKw6N">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -161,7 +161,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KYioZ5">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KYioZ5">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -188,7 +188,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FrwFKD">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FrwFKD">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -215,7 +215,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RtpoPf">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RtpoPf">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -235,7 +235,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Il0EWi">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Il0EWi">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -262,7 +262,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WNOgSu">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2WNOgSu">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -289,7 +289,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MVSCYe">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MVSCYe">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -309,7 +309,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FgK1cg">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FgK1cg">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -329,7 +329,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZpLNzs">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZpLNzs">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -356,7 +356,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XqWsgc">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XqWsgc">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -376,7 +376,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FfhRyz">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FfhRyz">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -396,7 +396,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31O0MFA">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31O0MFA">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -416,7 +416,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZvIGGo">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZvIGGo">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -436,7 +436,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IOcgAd">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IOcgAd">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -456,7 +456,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Rhrwtd">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Rhrwtd">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -476,7 +476,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IRx4qv">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IRx4qv">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -496,7 +496,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IIrcQg">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IIrcQg">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -516,7 +516,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FejpZn">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FejpZn">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -543,7 +543,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KUjKEf">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KUjKEf">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -563,7 +563,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MRqu8x">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MRqu8x">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -583,7 +583,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MOmndo">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MOmndo">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -603,7 +603,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IN4O8t">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IN4O8t">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -630,7 +630,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ikv5M8">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Ikv5M8">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -650,7 +650,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2INSxk3">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2INSxk3">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -670,7 +670,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31CgsLY">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31CgsLY">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -697,7 +697,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RhwaYa">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RhwaYa">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -717,7 +717,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IKt3Ea">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IKt3Ea">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -744,7 +744,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31Cblv3">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31Cblv3">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -764,7 +764,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KjTJPj">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KjTJPj">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -791,7 +791,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Fd75ZC">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Fd75ZC">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -818,7 +818,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IO4yGb">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IO4yGb">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -838,7 +838,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Fg2mpV">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Fg2mpV">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -858,7 +858,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RjONL2">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RjONL2">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -878,7 +878,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IGXj2A">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IGXj2A">Use Code at Amazon</a>
   </div>
 </div>
 
