--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -19,7 +19,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZxH5zW">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZxH5zW">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -44,7 +44,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IPGnHm">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IPGnHm">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -76,7 +76,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Fj2hSx">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Fj2hSx">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -101,7 +101,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MUTufN">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MUTufN">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -133,7 +133,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Zv44vd">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Zv44vd">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -158,7 +158,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XgVgMh">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XgVgMh">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -183,7 +183,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KYmS1X">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KYmS1X">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -215,7 +215,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2L3DxBv">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2L3DxBv">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -247,7 +247,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RjPy6M">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RjPy6M">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -272,7 +272,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZAcX74">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZAcX74">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -297,7 +297,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KSDEj8">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KSDEj8">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -322,7 +322,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2ZvhpDU">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2ZvhpDU">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -347,7 +347,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31AEAP7">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31AEAP7">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -372,7 +372,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IpjDyW">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IpjDyW">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -397,7 +397,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Roxokn">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Roxokn">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -429,7 +429,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Ip5m5d">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Ip5m5d">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -454,7 +454,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Rn0Qaz">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Rn0Qaz">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -479,7 +479,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Rqa4CH">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Rqa4CH">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -504,7 +504,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WPWdqi">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2WPWdqi">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -529,7 +529,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2InJkQo">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2InJkQo">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -554,7 +554,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XiJWiB">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XiJWiB">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -579,7 +579,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MW5DRz">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MW5DRz">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -604,7 +604,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XljCEr">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XljCEr">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -636,7 +636,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31EE7v3">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31EE7v3">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -661,7 +661,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RnMJS5">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RnMJS5">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -693,7 +693,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2KWB7EA">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2KWB7EA">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -725,7 +725,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RpvgJ1">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RpvgJ1">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -750,7 +750,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IP1cCN">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IP1cCN">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -775,7 +775,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Xmr6qM">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Xmr6qM">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -807,7 +807,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/31E4FN7">Use Code</a>
+    <a target="_blank" href="https://amzn.to/31E4FN7">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -832,7 +832,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XiI49z">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XiI49z">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -857,7 +857,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XfTQS8">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XfTQS8">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -889,7 +889,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2MS4zOt">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2MS4zOt">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -914,7 +914,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RrEip6">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RrEip6">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -939,7 +939,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RlAGF2">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RlAGF2">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -964,7 +964,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2XgcJEB">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2XgcJEB">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -989,7 +989,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2RlerPl">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2RlerPl">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1021,7 +1021,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2WNBnba">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2WNBnba">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1046,7 +1046,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2FiGlqs">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2FiGlqs">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1067,7 +1067,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IRkGqm">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IRkGqm">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1092,7 +1092,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2INZEZM">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2INZEZM">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1117,7 +1117,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2IULO89">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2IULO89">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1149,7 +1149,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Rn0ssE">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Rn0ssE">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1174,7 +1174,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Xl7nI7">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Xl7nI7">Use Code at Amazon</a>
   </div>
 </div>
 
@@ -1199,7 +1199,7 @@
     </div>
   </div> 
   <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2Xlnd5p">Use Code</a>
+    <a target="_blank" href="https://amzn.to/2Xlnd5p">Use Code at Amazon</a>
   </div>
 </div>
 
