--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -15,7 +15,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RsdgxP">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RsdgxP">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="47" data-price="37.08">
@@ -37,7 +37,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IXxlYU">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IXxlYU">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="6.00">
@@ -59,7 +59,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JcBSaf">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JcBSaf">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="39.19">
@@ -79,7 +79,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xq6Sg0">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xq6Sg0">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="70" data-price="6.00">
@@ -99,7 +99,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YcaIqh">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YcaIqh">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="70" data-price="5.70">
@@ -119,7 +119,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2x5F69x">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2x5F69x">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="22.81">
@@ -139,7 +139,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IvHcWN">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IvHcWN">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="10" data-price="95.39">
@@ -161,7 +161,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fn6Zi8">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fn6Zi8">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="70" data-price="21.00">
@@ -183,7 +183,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JcDDnR">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JcDDnR">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="65" data-price="16.10">
@@ -203,7 +203,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IwBtQP">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IwBtQP">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="10.79">
@@ -223,7 +223,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2x5GpVZ">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2x5GpVZ">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="27" data-price="18.97">
@@ -243,7 +243,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y3ACMx">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y3ACMx">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="17.50">
@@ -263,7 +263,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ix6Cn0">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ix6Cn0">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="32.49">
@@ -285,7 +285,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y2VHqr">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y2VHqr">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="21" data-price="21.32">
@@ -305,7 +305,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J0bHmT">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J0bHmT">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="18.50">
@@ -327,7 +327,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xq60rC">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xq60rC">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="18.59">
@@ -347,7 +347,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpxVbc">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpxVbc">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="60" data-price="11.60">
@@ -367,7 +367,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FmrBqw">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FmrBqw">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="13.19">
@@ -387,7 +387,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XqNuzg">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XqNuzg">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="11.49">
@@ -407,7 +407,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4gHNB">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4gHNB">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="23.99">
@@ -429,7 +429,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y2cdar">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y2cdar">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="13.99">
@@ -449,7 +449,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xjjaqv">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xjjaqv">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="11.89">
@@ -471,7 +471,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XuzEvK">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XuzEvK">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="15" data-price="84.15">
@@ -493,7 +493,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FkK2vS">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FkK2vS">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="25" data-price="19.49">
@@ -513,7 +513,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FrdOPM">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FrdOPM">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="13.96">
@@ -535,7 +535,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XphVpK">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XphVpK">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="25" data-price="14.99">
@@ -557,7 +557,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlC5Rt">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlC5Rt">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="9.99">
@@ -577,7 +577,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ru1Nxz">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ru1Nxz">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="15.98">
@@ -599,7 +599,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xoo05z">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xoo05z">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="60" data-price="10.00">
@@ -619,7 +619,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xo9meJ">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xo9meJ">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="15" data-price="40.79">
@@ -641,7 +641,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlTcmd">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlTcmd">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="60" data-price="12.00">
@@ -661,7 +661,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XuIk5i">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XuIk5i">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="16.19">
@@ -681,7 +681,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N1odIa">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N1odIa">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="34" data-price="46.19">
@@ -701,7 +701,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y1XYCo">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y1XYCo">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="59.99">
@@ -721,6 +721,6 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlUOwh">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XlUOwh">Use Code at Amazon</a></div>
 </div>
 
