--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -81,8 +81,9 @@
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>a{text-decoration:none;color:#08f;font-size:13px;}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span{}
   .codes .card_wrap .card .inner>.code_high>ul>li>ul>li>span>em{font-size:11px;text-decoration:line-through;color:#616161;margin-left:1%;}
-  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:3px solid #000;padding:10px 0;}
+  .codes .card_wrap .card .deal_btn{float:left;width:20%;text-align:center;margin:60px 1.5% 0 1.5%;border:3px solid #000;padding:10px 5px;}
   .codes .card_wrap .card .deal_btn a{text-decoration:none;color:#000;display:block;font-family: 'Montserrat', sans-serif;font-weight:bold;}
+  
 }
 
 @media screen and (max-width:640px){
@@ -312,54 +313,20 @@
 .men_women ul li{float:left;width:70px;}
 .men_women ul li a{text-decoration:none;color:#000;}
 
-.tabs {
-  padding: 0 1em;
-  margin: 0;
+.popup-container{position: fixed;width:70%;height:90%;background:#000;left: 50%;top: 50%;transform: translate(-50%, -50%);display:none;z-index: 999;}
+.popup-content table{color:#fff;margin:10px auto;border-collapse:collapse;}
+.popup-content table tr:nth-child(even) {background-color:#fff;color:#000;}
+.popup-content table tr td{padding:5px;}
+.popup-content table tr th{width:100px;padding:8px;}
+#closeBtn{position:absolute;right:30px;top:10px;color:#fff;cursor:pointer;margin:0;padding:0;}
+#clickMeBtn{cursor:pointer;}
+@media screen and (max-width:640px){
+  .popup-container{position: fixed;width:100%;height:100%;}
+  .popup-content table{margin:50px auto;}
 }
-.tabs nav {
-  position: relative;
-  padding-bottom: 0;
-  margin-bottom: 0;
+@media screen and (min-width:641px) and (max-width:1199px){
+  .popup-container{width:80%;}
+  .popup-content table{margin:70px auto;}
 }
-.tabs nav ul {
-  display: inline-block;
-  width: 100%;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.tabs nav li {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  padding: 1rem 2rem 0.8rem;
-  margin-right: 0.5em;
-  font-family: "Raleway";
-  font-size: 130%;
-  color: gray;
-  text-decoration: none;
-  cursor: pointer;
-  background-color: white;
-  border-bottom: 0.2rem solid silver;
-  transition: all 200ms;
-}
-.tabs nav li:not(.current):hover {
-  color: #62dfc3;
-  border-bottom: 0.2rem solid #62dfc3;
-}
-.tabs nav li.current {
-  color: white;
-  cursor: default;
-  background-color: #62dfc3;
-  border-bottom: 0.2rem solid #62dfc3;
-}
-.shoes_content section {
-  display: none;
-  text-align: justify;
-}
-.shoes_content section.current {
-  display: block;
-}
-
 
 
