--- a/app/views/promocodes_days/_day_06.html.erb
+++ b/app/views/promocodes_days/_day_06.html.erb
@@ -17,7 +17,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31NyxqC">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31NyxqC">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="23.99">
@@ -37,7 +37,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fmavt9">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fmavt9">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="8.39">
@@ -57,7 +57,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Kvk7WD">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Kvk7WD">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="70" data-price="10.20">
@@ -77,7 +77,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZyXuDZ">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZyXuDZ">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="14.39">
@@ -100,7 +100,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZGvPRP">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZGvPRP">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="7.50">
@@ -122,7 +122,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZutrgS">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZutrgS">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="17.59">
@@ -144,7 +144,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N0dWf5">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N0dWf5">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="15" data-price="42.49">
@@ -164,7 +164,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FjdORx">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FjdORx">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="17.49">
@@ -184,7 +184,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4ofzW">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4ofzW">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="40" data-price="14.39">
@@ -206,7 +206,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZxYhFi">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZxYhFi">Use Code at Amazon</a></div>
 </div>
 
 
@@ -227,7 +227,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fl7mto">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fl7mto">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="10" data-price="89.95">
@@ -247,7 +247,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZBisSG">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2ZBisSG">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="34.99">
@@ -269,7 +269,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31KHikV">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31KHikV">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="60" data-price="20.00">
@@ -289,7 +289,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XncBD3">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XncBD3">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="10.98">
@@ -309,7 +309,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KrvYoz">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KrvYoz">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="4.50">
@@ -329,7 +329,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WT3kn5">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WT3kn5">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="79.99">
@@ -349,7 +349,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FlhhPU">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FlhhPU">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="55" data-price="11.70">
@@ -369,7 +369,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31MONrw">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/31MONrw">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="30" data-price="15.39">
@@ -391,7 +391,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WRWA8R">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WRWA8R">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="35" data-price="8.44">
@@ -411,7 +411,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WRhULI">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WRhULI">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="15" data-price="16.99">
@@ -431,7 +431,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MZIcab">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MZIcab">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="19.99">
@@ -451,7 +451,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IUZj7z">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IUZj7z">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="55" data-price="19.35">
@@ -471,7 +471,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fm7hFL">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fm7hFL">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="10.99">
@@ -491,7 +491,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpfBij">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpfBij">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="37" data-price="16.98">
@@ -511,7 +511,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fm8i0x">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fm8i0x">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="17" data-price="24.99">
@@ -533,7 +533,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpfDa3">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XpfDa3">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="32" data-price="10.48">
@@ -556,7 +556,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MYzUzm">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MYzUzm">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="13" data-price="137.21">
@@ -578,7 +578,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsYu9s">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsYu9s">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="28.00">
@@ -600,7 +600,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IWBuML">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IWBuML">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="64.00">
@@ -622,7 +622,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsdunN">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsdunN">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="22" data-price="210.59">
@@ -642,7 +642,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsVz0t">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2KsVz0t">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="20" data-price="15.19">
@@ -664,7 +664,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XWCWVO">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XWCWVO">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="15" data-price="16.99">
@@ -687,7 +687,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y39mOq">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y39mOq">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="8.74">
@@ -709,7 +709,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MYAU6A">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2MYAU6A">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="10.49">
@@ -729,7 +729,7 @@
       <em>*Average rating and Reviews may change after promo codes updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FljGdo">Use Code</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FljGdo">Use Code at Amazon</a></div>
 </div>
 
 
